增加侧边导航栏

--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "file-loader": "0.11.2",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
+    "install": "^0.10.1",
     "jest": "20.0.4",
+    "material-ui": "^0.18.5",
+    "npm": "^5.0.4",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.6",
@@ -34,6 +37,8 @@
     "react-dev-utils": "^3.0.1",
     "react-dom": "^15.6.1",
     "react-error-overlay": "^1.0.8",
+    "react-router-dom": "^4.1.1",
+    "react-tap-event-plugin": "^2.0.1",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.3",
     "url-loader": "0.5.9",
