--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.1",
+    "react-tap-event-plugin": "^2.0.1",
+    "material-ui": "^0.18.5"
+  },
+  "devDependencies": {
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "webpack": "^2.6.1",
     "autoprefixer": "7.1.1",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
@@ -27,30 +37,19 @@
     "html-webpack-plugin": "2.29.0",
     "install": "^0.10.1",
     "jest": "20.0.4",
-    "material-ui": "^0.18.5",
     "npm": "^5.0.4",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.6",
     "promise": "7.1.1",
-    "react": "^15.6.1",
-    "react-dev-utils": "^3.0.1",
-    "react-dom": "^15.6.1",
-    "react-error-overlay": "^1.0.8",
-    "react-router-dom": "^4.1.1",
-    "react-tap-event-plugin": "^2.0.1",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.3",
     "url-loader": "0.5.9",
-    "webpack": "2.6.1",
     "webpack-dev-server": "2.5.0",
     "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "2.0.3"
-  },
-  "devDependencies": {
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
-    "webpack": "^2.6.1"
+    "whatwg-fetch": "2.0.3",
+    "react-dev-utils": "^3.0.1",
+    "react-error-overlay": "^1.0.8"
   },
   "scripts": {
     "start": "node scripts/start.js",
