--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
+    "child-process-promise": "^2.2.1",
+    "material-ui": "^0.18.5",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.1",
-    "react-tap-event-plugin": "^2.0.1",
-    "material-ui": "^0.18.5"
+    "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
     "node-sass": "^4.5.3",
