--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.1",
+    "react-swipeable-views": "^0.12.8",
     "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
